--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,7 @@
 name: Recent Blog Posts Update
 on:
   schedule:
-    - cron: '0 0 * * *' # 한국 기준 16시 마다 작업 스케줄링
+    - cron: '0 0 * * *' # 한국 기준 09:00 AM 마다 작업 스케줄링
   workflow_dispatch:
   
 jobs:
