--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,7 @@
 name: Recent Blog Posts Update
 on:
   schedule:
-    - cron: '0 */6 * * *' # 6시간마다 작업 실행
+    - cron: '0 * * * *' # 매시간마다 작업 실행
   workflow_dispatch:
   
 jobs:
