--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -9,8 +9,10 @@ jobs:
     name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Pull in dev.to posts
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: 'https://kingpiggylab.tistory.com/rss'
-          max_post_count: '3'
+          max_post_count: '5'
