--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,18 +1,18 @@
-name: Recent Blog Posts Update
-on:
-  schedule:
-    - cron: '0 * * * *' # 매시간마다 작업 실행
-  workflow_dispatch:
+# name: Recent Blog Posts Update
+# on:
+#   schedule:
+#     - cron: '0 * * * *' # 매시간마다 작업 실행
+#   workflow_dispatch:
   
-jobs:
-  update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Pull in dev.to posts
-        uses: gautamkrishnar/blog-post-workflow@master
-        with:
-          feed_list: 'https://kingpiggylab.tistory.com/rss'
-          max_post_count: '5'
+# jobs:
+#   update-readme-with-blog:
+#     name: Update this repo's README with latest blog posts
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Pull in dev.to posts
+#         uses: gautamkrishnar/blog-post-workflow@master
+#         with:
+#           feed_list: 'https://kingpiggylab.tistory.com/rss'
+#           max_post_count: '5'
